# lp-jira-sync

./: .gitignore  .gitreview  MANIFEST.in  README.rst  lp_jira_sync.conf  lp_jira_sync_credentials.conf  pylintrc  requirements-pip.txt  requirements.txt  setup.cfg  sync.py  test-requirements.txt  tox.ini
etc/: lp_jira_sync.conf.sample
lp_jira_sync/: cli.py  config.py  db.py  lp_jira_sync.conf.example  sync.py
lp_jira_sync/cmd/: sync_bugs.py
shared/: lp_client.py
tests/: test_sync.py
