[metadata]
name = lp-jira-sync
summary = JIRA-Launchpad Sync project
description-file = README.rst
version = 0.1
author = Roman Salin
author-email = rsalin@mirantis.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Operating System :: POSIX :: Linux

[files]
packages =
    lp_jira_sync
