[metadata]
name = lp-jira-sync
summary = JIRA-Launchpad Sync project
description-file = README.rst
author = Roman Salin
author-email = rsalin@mirantis.com
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    lp_jira_sync

[entry_points]
console_scripts =
    lp-jira-sync = lp_jira_sync.sync:main
